--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,65 +1,31 @@
+# Use the latest 2.1 version of CircleCI pipeline process engine.
+# See: https://circleci.com/docs/configuration-reference
 version: 2.1
-jobs:
-  unit-tests:
-    docker:
-      - image: cimg/node:14.20.0
-    steps:
-      - checkout
-      - run:
-          name: "install dependencies"
-          command: yarn
-      - run:
-          name: "run project unit tests"
-          command: yarn redwood test
-  sast:
-    docker:
-      - image: cimg/node:14:20.0
-    steps:
-      - checkout
-      - run:
-          name: "install dependencies"
-          command: yarn
-      - run:
-          name: "execute retire.js"
-          command: cd web; retire --path web
-  build-app:
-    docker:
-      - image: cimg/node:14.20.0
-    steps:
-      - checkout
-      - run:
-          name: "install dependencies"
-          command: yarn
-      - run:
-          name: "build deploy artifact"
-          command: yarn redwood build
-  deploy-feature:
-    docker:
-      - image: cimg/node:17.1.0
-    steps:
-      - checkout
-      - run:
-          name: "deploy to feature env"
-          command: echo "Deployed to feature environment with AWS S3 bucket magic or Azure container magic"
-  dast:
-    docker:
-      - image: cimg/go:1.19.0
-    steps:
-      - checkout
-      - run: go version
-      - run:
-          name: "install nuclei-cli"
-          command: go install -v github.com/projectdiscovery/nuclei/v2/cmd/nuclei@latest
-      - run:
-          name: "Nuclei scan on QA"
-          command: nuclei -u https://flippedcoding.com
 
+# Define a job to be invoked later in a workflow.
+# See: https://circleci.com/docs/jobs-steps/#jobs-overview & https://circleci.com/docs/configuration-reference/#jobs
+jobs:
+  say-hello:
+    # Specify the execution environment. You can specify an image from Docker Hub or use one of our convenience images from CircleCI's Developer Hub.
+    # See: https://circleci.com/docs/executor-intro/ & https://circleci.com/docs/configuration-reference/#executor-job
+    docker:
+      # Specify the version you desire here
+      # See: https://circleci.com/developer/images/image/cimg/base
+      - image: cimg/base:current
+
+    # Add steps to the job
+    # See: https://circleci.com/docs/jobs-steps/#steps-overview & https://circleci.com/docs/configuration-reference/#steps
+    steps:
+      # Checkout the code as the first step.
+      - checkout
+      - run:
+          name: "Say hello"
+          command: "echo Hello, World!"
+
+# Orchestrate jobs using workflows
+# See: https://circleci.com/docs/workflows/ & https://circleci.com/docs/configuration-reference/#workflows
 workflows:
-  deploy-to-qa:
+  say-hello-workflow: # This is the name of the workflow, feel free to change it to better match your workflow.
+    # Inside the workflow, you define the jobs you want to run.
     jobs:
-      - unit-tests
-      - sast
-      - build-app
-      - deploy-feature
-      - dast
-      
+      - say-hello
